Fix timer events on mobile
Before, timer was started on mobile by touching and holding the screen. However, this will cause problems in the future when other buttons are added (menu, new scramble, etc). So the timer is started only when touching the body of the app.

--- a/src/App.scss
+++ b/src/App.scss
@@ -112,8 +112,11 @@ and (max-width : 1024px)  {
 @media only screen 
 and (max-width : 667px)  {
   .App-header {
-    height: 90px;
+    height: 15%;
     padding: 10px 20px;
+  }
+  .App-body {
+    height: 85%;
   }
   .App-intro {
     font-size: 4em;
@@ -122,8 +125,7 @@ and (max-width : 667px)  {
     height: 275px;
   }
   .stats li{
-    float: none;
-    width: auto;
+    width: 50%;
     margin-bottom: 10px;
   }
   .timelist {
